changes on home

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 .body-home {
   background-color: #FA697C;
-  height: 100vh;
+  height: 60vh;
   text-align: center;
 }
 
@@ -28,6 +28,12 @@
   text-align: left;
   color: white;
 }
+
+#text-home-2 {
+  font-size: 20px;
+  color: white;
+}
+
 
 .slogan-text {
   display: flex;
