--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,9 @@
         </div>
       </div>
     </div>
-    <p style="padding: 6em;"><em>En établissement hospitalier aussi, on peut être bien entouré</em></p>
+    <div class="container", style="height:30vh">
+    <p style="padding: 6em;"><em id="text-home-2">En établissement hospitalier aussi, on peut être bien entouré</em></p>
+    </div>
   </div>
 
   <div class="search-bar-homepage">
@@ -31,7 +33,13 @@
       </div>
     <% end %>
   </div>
+  <div class="container sign-in-home">
+    <h2><%=link_to "Sign in", new_user_registration_path, class: "btn-chatroom"%></h2>
+  </div>
 </div>
+
+
+
 
 
 <div class="top-events-new">
