--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,17 +1,17 @@
 function addmessage() {
   const selectId = document.querySelector('#chat-refresh')
-  if (selectId.dataset.userId === <%= current_user.id %>) {
+  // if (selectId.dataset.userId === <%#= current_user.id %>) {
     const messagesContainer = document.querySelector('.messages');
-    messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message %>');
+    messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message, class_name: "right" %>');
     const input = document.querySelector('#message_content');
     input.value = '';
     input.blur();
-
-  }
-  else {
-    const input = document.querySelector('#message_content');
-    input.value = '';
-  };
+    scrollLastMessageIntoView();
+  // }
+  // else {
+    // const input = document.querySelector('#message_content');
+    // input.value = '';
+  // };
 
 }
 
