changed buttons on event show

--- a/app/views/shared/_add_event_btn.html.erb
+++ b/app/views/shared/_add_event_btn.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <%= link_to new_event_path do %>
-    <div class="btn-add">
+    <div class="btn-round sticky">
         <i class="far fa-calendar-plus"></i>
     </div>
   <% end %>
