--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,4 @@
-.btn-add{
+.btn-round{
   background-color: $purple;
   color: white;
   padding: 2vh 3vh;
@@ -8,9 +8,78 @@
   width: min-content;
   height: min-content;
   font-size: 3vh;
-  position: fixed;
-  bottom: 85vh;
-  right: 2vh;
-  z-index: 20;
+  &.sticky{
+    position: fixed;
+    bottom: 85vh;
+    right: 2vh;
+    z-index: 20;
+  }
 }
 
+.btn-participer{
+  background: #ff5252;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 1.3vh;
+  color: white;
+  margin-top: 2em;
+  width: fit-content;
+  height: fit-content;
+
+  &:hover{
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    opacity: 0.8;
+    text-decoration:none;
+    color: white;
+  }
+}
+
+.btn-desinscrire{
+  background: grey;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 1.3vh;
+  color: white;
+  opacity: 0.6;
+  margin-top: 1em;
+
+ &:hover{
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    opacity: 0.8;
+    text-decoration:none;
+    color: white;
+  }
+  a:active{
+    text-decoration:none;
+    color: white;
+  }
+
+}
+
+.btn-chatroom{
+  color:black;
+  font-weight: bold;
+  background: white;
+  opacity:0.7;
+  font-size: 13px;
+  padding: 1.5vh;
+  border-radius: 5px;
+  max-height: 7vh;
+}
+
+.btn-del-up{
+  color:black;
+  font-weight: bold;
+  background: #D1CADA;
+  opacity:0.7;
+  font-size: 13px;
+  padding: 1.5vh;
+  border-radius: 5px;
+  margin:1vh;
+}
+
+.link_to{
+  &:hover{
+    text-decoration:none;
+  }
+}
