--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -8,7 +8,7 @@
       <h1> <%= event.name %> </h1>
       <p id="date-event-show"> <%= @event.start.day %>/<%= @event.start.month %></p>
     </div>
-    <p> <%= event.description %> </p>
+    <p class="mb-3"> <%= event.description %> </p>
     <% if current_user == event.user %>
       <div class="d-flex justify-content-between">
         <div class="d-flex">
@@ -19,11 +19,15 @@
       </div>
     <% elsif Reservation.where(user: current_user, event: event).exists? %>
       <div class="d-flex justify-content-between">
-        <%= link_to "Se désinscrire", event_reservation_path(@event), method: :delete, class: "btn-desinscrire" %>
-        <%= link_to "Chat-Room", "#", class: "btn-chatroom" %>
+        <%= link_to event_reservation_path(@event), method: :delete do%>
+          <div class="btn-desinscrire">
+            <i class="fas fa-check"></i><%= " Participe" %>
+          </div>
+        <% end %>
+        <%= render 'shared/chat_btn' %>
       </div>
     <% else %>
-      <%= link_to "Participer", event_reservations_path(@event), method: :post, class: "btn-participer"%>
+      <%= link_to " Participer", event_reservations_path(@event), method: :post, class: "btn-participer d-block"%>
     <% end %>
   </div>
 </div>
