--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="d-flex tete-single-event">
       <h1> <%= event.name %> </h1>
-      <p id="date-event-show"> <%= @event.start.day %>/<%= @event.start.month %></p>
+      <p id="date-event-show"> <%= I18n.localize(event.start, format: "%d%^b") %></p>
     </div>
     <p class="mb-3"> <%= event.description %> </p>
     <% if current_user == event.user %>
