--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,8 +1,14 @@
  <div class="profil-infos">
   <div class="links-dash">
-    <i class="far fa-edit" style="color:white; margin-right: 1em;"></i>
-    <i class="fas fa-cog" style="color:white;"></i>
+    <li class="nav-item dropdown">
+      <%= image_tag "https://www.pngix.com/pngfile/middle/112-1121371_settings-icon-svg-setting-icon-hd-png-download.png", class: "dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+      <%= link_to "Edit Profile", "#", class: "dropdown-item" %>
+    <%= link_to "Logout", "#", class: "dropdown-item" %>
+    </div>
+    </li>
   </div>
+
   <div class="profil-image-name">
     <%= cl_image_tag @user.photo.key, height: 60, width: 60, class: "avatar-bordered" %>
     <%= @user.username %>
