--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,8 +3,8 @@
     <%= render "shared/topbar" %>
   </div>
   <div class="photo-create-event">
-    <%= image_tag "smiley-logo.jpg", class: "hidden photo-create-event", id: "photo-preview" %>
-    <%= image_tag "photo.png", class: "add-event-picto", id: "browsing-photo" %>
+    <%= image_tag "placeholder.jpg", class: "hidden photo-create-event", id: "photo-preview" %>
+    <%= image_tag "icon.png", class: "add-event-picto", id: "browsing-photo" %>
   </div>
 </div>
 
