--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -29,7 +29,7 @@
   margin-top: 2em;
   width: fit-content;
   height: fit-content;
-
+}
   &:hover{
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     opacity: 0.8;
