--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -9,7 +9,7 @@
         <% end %>
       </div>
       <div id="create-message">
-        <%= simple_form_for [ @chat_room, Message.new ], remote: true do |f| %>
+        <%= simple_form_for [ @event, @chat_room, Message.new ], remote: true do |f| %>
           <%= f.input :content, label: false, as: :string %>
         <% end %>
       </div>
