--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -6,13 +6,23 @@
   display: flex;
   align-items:center;
   justify-content:center;
+  display: none;
 }
+
+
 
 .links-dash {
   position: absolute;
   font-size: 3em;
   right: 5%;
   top: 2%;
+  list-style: none;
+
+}
+
+.dropdown-item {
+  font-size: 12px;
+  text-align: right;
 }
 
 .profil-image-name {
@@ -27,8 +37,9 @@
 }
 
 .dropdown-toggle {
-  height: 50px;
-  width: 50px;
+  width: 5vh;
+  height: 5vh;
+
 }
 
 .infos-events-user {
