--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
   <body>
+    <div class="banner-create-event">
+      <%= render "shared/topbar" %>
+    </div>
     <div class='sticky-navbar'>
       <%= yield %>
     </div>
