--- a/app/views/shared/_card_new_event.html.erb
+++ b/app/views/shared/_card_new_event.html.erb
@@ -1,4 +1,4 @@
-<div class="card-event-new card-home-new" >
+<div class="card-event-new card-home-new <%= 'past-event' if event.end < DateTime.now %>" >
   <% if event.photo.attached? %>
     <div class='event-image' style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path event.photo.key%>')">
   <% else %>
