--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,6 +1,14 @@
 
 <div class="container-topbar">
   <%= link_to image_tag("arrow-left.png"), :back, id:"arrow-picto" %>
-  <h1><%= @name_page %></h1>
- 
+  <h1 class="tobar-title"><%= @name_page %></h1>
+ <div class="links-dash">
+   <li class="nav-item dropdown">
+     <%= image_tag "gear.png", class: "dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+     <%= link_to "Edit Profile", "#", class: "dropdown-item" %>
+   <%= link_to "Logout", "#", class: "dropdown-item" %>
+   </div>
+   </li>
+ </div>
 </div>
