--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="d-flex tete-single-event">
       <h1> <%= event.name %> </h1>
-      <p id="date-event-show"> <%= I18n.localize(event.start, format: "%d%^b") %></p>
+      <p id="date-event-show"> <%= @event.start.day %>/<%= @event.start.month %></p>
     </div>
     <p class="mb-3"> <%= event.description %> </p>
     <% if current_user == event.user %>
@@ -15,21 +15,16 @@
           <%= link_to "Delete Event", "#", class: "btn-del-up" %>
           <%= link_to "Update Event", edit_event_path(event), class: "btn-del-up" %>
         </div>
-        <%= link_to "Chat-Room",  event_chat_rooms_path(@event), method: :post, class: "btn-chatroom" %>
+        <%= link_to "Chat-Room", "#", class: "btn-chatroom" %>
       </div>
     <% elsif Reservation.where(user: current_user, event: event).exists? %>
       <div class="d-flex justify-content-between">
-
-        <%= link_to "Se désinscrire", event_reservation_path(@event), method: :delete, class: "btn-desinscrire" %>
-        <%= link_to "Chat-Room",  event_chat_rooms_path(@event), method: :post, class: "btn-chatroom" %>
-
         <%= link_to event_reservation_path(@event), method: :delete do%>
           <div class="btn-desinscrire">
             <i class="fas fa-check"></i><%= " Participe" %>
           </div>
         <% end %>
         <%= render 'shared/chat_btn' %>
-
       </div>
     <% else %>
       <%= link_to " Participer", event_reservations_path(@event), method: :post, class: "btn-participer d-block"%>
