--- a/app/views/shared/_chat_btn.html.erb
+++ b/app/views/shared/_chat_btn.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper animated fadeIn">
-  <%= link_to new_event_path do %>
+  <%= link_to event_chat_rooms_path(@event), method: :post do %>
     <div class="btn-round">
        <i class="fas fa-comments"></i>
     </div>
