fixed dashboard events

--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container-topbar">
+<div class="container-topbar mt-2">
   <%= link_to image_tag("arrow-left.png"), :back, id:"arrow-picto" %>
   <h1 class="tobar-title"><%= @name_page %></h1>
  <div class="links-dash">
