--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -72,16 +72,23 @@
   max-height: 7vh;
 }
 
-.btn-del-up{
-  color:black;
+.update-event{
+  color:white;
   font-weight: bold;
-  background: #D1CADA;
-  opacity:0.7;
-  font-size: 13px;
-  padding: 1.5vh;
-  border-radius: 5px;
+  font-size: 3em;
   margin:1vh;
+  display:flex;
+  justify-content: between;
+  align:right;
+
+a{
+  color:white !important;
+  margin-left: .5em;
+  padding-bottom: 1em;
 }
+
+}
+
 
 .link_to{
   &:hover{
