--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -32,7 +32,7 @@
     }
     h2{
       margin-bottom:0;
-      color: $my-red;
+      color: #8F5750;
     }
     p{
       color: white;
@@ -74,7 +74,7 @@
     }
     h2{
       margin-bottom:0;
-      color: $my-red;
+      color: #8F5750;
     }
     p{
       font-size:2em;
