--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -7,15 +7,18 @@
     <div class="d-flex tete-single-event">
       <h1> <%= event.name %> </h1>
       <p id="date-event-show"> <%= @event.start.day %>/<%= @event.start.month %></p>
+      <% if current_user == event.user %>
+        <div class="update-event">
+           <%= link_to edit_event_path(event) do %>
+            <i class="fas fa-edit"></i>
+        <% end %>
+        </div>
+      <% end %>
     </div>
     <p class="mb-3"> <%= event.description %> </p>
     <% if current_user == event.user %>
       <div class="d-flex justify-content-between">
-        <div class="d-flex">
-          <%= link_to "Delete Event", "#", class: "btn-del-up" %>
-          <%= link_to "Update Event", edit_event_path(event), class: "btn-del-up" %>
-        </div>
-        <%= link_to "Chat-Room", event_chat_rooms_path(@event), method: :post, class: "btn-chatroom" %>
+        <%= render 'shared/chat_btn'  %>
       </div>
     <% elsif Reservation.where(user: current_user, event: event).exists? %>
       <div class="d-flex justify-content-between">
