--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -21,16 +21,14 @@
         <%= render 'shared/chat_btn'  %>
       </div>
     <% elsif Reservation.where(user: current_user, event: event).exists? %>
-      <div class="d-flex justify-content-between">
-        <%= link_to event_reservation_path(@event), method: :delete do%>
-          <div class="btn-desinscrire">
-            <i class="fas fa-check"></i><%= " Participe" %>
-          </div>
-        <% end %>
-        <%= render 'shared/chat_btn'  %>
-      </div>
+    <%= render 'shared/participe_call_to_action' %>
     <% else %>
-      <%= link_to " Participer", event_reservations_path(@event), method: :post, class: "btn-participer d-block"%>
+    <div class="participe d-none">
+      <%= render 'shared/participe_call_to_action' %>
+    </div>
+    <div class="participe-pas">
+      <%= link_to " Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
+    </div>
     <% end %>
   </div>
 </div>
