--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -1,7 +1,7 @@
 .banner-create-event {
   display: flex;
   justify-content: flex-start;
-  background-color: $purple;
+  background-color: #FA697C;
   height: 10vh;
   color:white;
 
