--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -9,7 +9,15 @@
   display: none;
 }
 
-
+h2 {
+  a{
+    text-decoration: none;
+    color:black;
+    &:hover{
+      opacity: 0.8;
+    }
+  }
+}
 
 .links-dash {
   position: absolute;
