--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,7 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
-
+$light-blue: #00909e;
 $purple: #8067CF;
 $my-red:#ff5252;
 $my-grey:#FCFAF9;
