--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,14 +1,13 @@
-
 <div class="container-topbar">
   <%= link_to image_tag("arrow-left.png"), :back, id:"arrow-picto" %>
   <h1 class="tobar-title"><%= @name_page %></h1>
  <div class="links-dash">
-   <li class="nav-item dropdown">
-     <%= image_tag "gear.png", class: "dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-     <%= link_to "Edit Profile", "#", class: "dropdown-item" %>
-   <%= link_to "Logout", "#", class: "dropdown-item" %>
-   </div>
-   </li>
+  <li class="nav-item dropdown">
+    <i class="fas fa-bars" class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
+  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+     <%= link_to "Edit Profile", dashboard_path, class: "dropdown-item" %>
+    <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+  </div>
+  </li>
  </div>
 </div>
