fixed ajax on event show

--- a/app/views/reservations/destroy.js.erb
+++ b/app/views/reservations/destroy.js.erb
@@ -1,5 +1,5 @@
 
-
+if (document.querySelector(".participe")){
  const leaveEvent = () => {
   const participeDes = document.querySelector(".participe")
   const participePasDes = document.querySelector(".participe-pas")
@@ -8,3 +8,5 @@
  }
 
 leaveEvent()
+
+}
