--- a/app/views/reservations/create.js.erb
+++ b/app/views/reservations/create.js.erb
@@ -1,4 +1,5 @@
 
+if (document.querySelector(".participe-pas")){
 
  const joinEvent = () => {
   const participe = document.querySelector(".participe")
@@ -8,3 +9,5 @@
  }
 
  joinEvent()
+
+}
