--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,7 +1,7 @@
 .btn-round{
   background-color: $blue;
   color: white;
-  padding: 2vh 3vh;
+  padding: 14px 21px;
   border-radius: 50%;
   font-weight: bold;
   opacity: 0.8;
@@ -88,6 +88,7 @@ a{
 }
 
 }
+
 
 
 .link_to{
