--- a/app/assets/stylesheets/components/_simple-form.scss
+++ b/app/assets/stylesheets/components/_simple-form.scss
@@ -50,6 +50,7 @@ div.boolean, .simple_form input[type='submit'] {
   background-color: $my-red;
   border: 0;
   font-size: 1.5em;
+  color: white;
 }
 
 div.boolean label {
