changes on homepage

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -25,3 +25,13 @@
   padding-left: 2em;
   padding-bottom: 1em;
 }
+
+
+.dropdown-item {
+  font-size: 12px;
+  text-align: right;
+}
+
+.dropdown-menu .dropdown-menu-right {
+  width: 50px;
+}
