--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,7 +18,6 @@
 
 .sign-in-home {
   width: 38%;
-  margin-top: 60px;
 
 .btn-participer{
   background: #ff5252;
@@ -87,4 +86,18 @@
     text-decoration:none;
   }
 
+}
+
+#btn-signin {
+  color:black;
+  font-weight: bold;
+  background: white;
+  opacity:0.7;
+  font-size: 16px;
+  padding: 1.5vh;
+  border-radius: 5px;
+  max-height: 7vh;
+  text-decoration: none;
+  vertical-align: middle;
+  padding-top: 2em;
 }
