--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -30,8 +30,10 @@
 }
 
 #text-home-2 {
-  font-size: 20px;
+  font-size: 28px;
   color: white;
+  text-align: center;
+  vertical-align: middle;
 }
 
 
@@ -39,4 +41,25 @@
   display: flex;
   align-items: center;
 
+}
+
+.search-field {
+  width: 90%;
+  font-size: 14px;
+}
+
+.top-home {
+  width: 100%;
+  height: 10vh;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 3em;
+  padding-right: 3em;
+  vertical-align: middle;
+}
+
+#logo-hplace {
+  height: 30px;
+  width: 30px;
 }
