--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -103,6 +103,11 @@
   top: 0;
   bottom: 0;
 }
+
+.cards_participant{
+  width: 100%;
+  overflow-y: auto;
+}
 .cards-new {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
