--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -7,7 +7,6 @@
   margin-bottom: 0.5em;
   position: relative;
   height: 22em;
-
     .event-image{
       background-size: cover;
       background-position: center;
@@ -15,7 +14,7 @@
     }
 
     .event-text{
-      margin-left: 1em;
+      margin-left: 2em;
       color:white;
     }
 
@@ -57,6 +56,11 @@
   margin-bottom: 0.5em;
   position: relative;
   height: 22em;
+  display: inline-grid;
+  min-width:90%;
+  margin: 1em;
+
+
 
 
     .event-image{
@@ -119,6 +123,11 @@
   padding-left: 20px;
   padding-top: 30px;
 }
+
+.cards-disc{
+ width: 100%;
+ overflow-y: scroll;
+ }
 
 
 // Smallest device
