--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -14,7 +14,7 @@
         <i class="far fa-bell"></i>
           <div class="button_badge ">
             <div class= "d-inline-flex align-items-center">
-              <p> <%= current_user.number_of_notifications %> </p>
+              <p class="number-of-notif"></p>
             </div>
           </div>
         <% end %>
