--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -58,6 +58,9 @@
   position: relative;
   height: 22em;
 
+.disabled {
+  pointer-events: none;
+}
 
     .event-image{
       background-size: cover;
@@ -113,6 +116,45 @@
 #number-of-participants {
   padding-left: 20px;
   padding-top: 30px;
+}
+
+.flex-between {
+  display: flex;
+  justify-content: left;
+  vertical-align: middle;
+  align-items: left;
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+.three-blocks {
+  display: flex;
+  justify-content: left;
+  vertical-align: middle;
+  align-items: center;
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+#submit {
+  width: 100%;
+  margin-top: 10px;
+}
+
+#counter {
+  margin: 0 15px;
+}
+
+.round-bordered {
+  border: 1px solid #5a5a5a;
+  border-radius: 50%;
+  width: 50px;
+  font-size: 18px;
+  color: #848484;
+  height: 50px;
+  padding: 6px;
+  margin: 6px;
+
 }
 
 
