--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -44,11 +44,11 @@
 input.form-control {
   border: 1px solid #ECECEC;
   box-shadow: none;
-  font-size: 14px;
+  font-size: 16px;
   color: #868686;
   &:focus {
     outline: none;
-    border: 1px solid blue;
+    border-bottom: 2px solid blue;
     box-shadow: none;
   }
 }
