--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -13,7 +13,7 @@
 
 .topbar {
   background-color: $coral;
-  height: 6em;
+  height: 7em;
   color:white;
   position:sticky;
   top:0;
@@ -77,6 +77,7 @@
   align-items: center;
   position: sticky;
   top:0;
+  padding:1em;
 }
 
 #title-hospital-index {
