--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,39 +1,16 @@
-<div class="profil-infos">
-  <div class="profil-image-name">
-    <% if @user.photo.attached? %>
-      <%= cl_image_tag @user.photo.key, height: 60, width: 60, class: "avatar-bordered" %>
-    <% else %>
-      <%= cl_image_tag "test.jpg", height: 60, width: 60, class: "avatar-bordered" %>
-    <% end %>
-    <%= @user.username %>
-  </div>
-  <div class="infos-events-user">
-    <div class="text-event" style="margin-right: 30vw">
-      <h4 style="font-size: 3em;"><strong>4</strong></h4>
-      <p style="font-size: 2em;"> Événements à venir</p>
-    </div>
-    <div class="text-event">
-      <h4 style="font-size: 3em;"><strong>3</strong></h4>
-      <p style="font-size: 2em;"> Invitations</p>
-    </div>
-  </div>
-</div>
-<div>
-  <ul class="list-inline tabs-underlined">
-    <li>
-      <h2 class="tab-underlined active découvrire">Découvrire</h2>
-    </li>
-    <li>
-      <h2 class="tab-underlined organise">J'organise</h2>
-    </li>
-    <li>
-      <h2 class="tab-underlined participe">Je participe</h2>
-    </li>
-  </ul>
-</div>
-
-<%= render 'shared/add_event_btn' %>
-
+ <div>
+   <ul class="list-inline tabs-underlined">
+     <li>
+       <h2 class="tab-underlined active découvrire">Découvrire</h2>
+     </li>
+     <li>
+       <h2 class="tab-underlined organise">J'organise</h2>
+     </li>
+     <li>
+       <h2 class="tab-underlined participe">Je participe</h2>
+     </li>
+   </ul>
+ </div>
 
 
 <div class="container mine animated  d-none fadeIn">
@@ -51,10 +28,17 @@
       <%= (render 'shared/card', event: event) if event.end < DateTime.now %>
     <% end %>
   </div>
+  <%= render 'shared/add_event_btn' %>
 </div>
 
-<div class="disc  animated fadeIn">
-  <h2 id="title-hospital-index"><%="#{@user.hospital.events.count} événements à venir" %></h2>
+<div class="disc animated fadeIn">
+  <div class="discover-top">
+    <div class="mt-3">
+      <p class="mb-0"><%="#{@user.hospital.events.count} événements"%></p>
+      <h1 id="title-hospital-index"><%="#{@user.hospital.name}" %></h2>
+    </div>
+    <%= render 'shared/add_event_btn' %>
+  </div>
   <div class="d-flex cards-disc">
       <% events = @user.hospital.events.sort_by {|event| event.start} %>
       <% events.each do |event| %>
@@ -81,8 +65,5 @@
       <%= (render 'shared/card_new_event', event: event) if event.end < DateTime.now %>
     <% end %>
   </div>
+  <%= render 'shared/add_event_btn' %>
 </div>
-
-
-
-
